# retail-inventory-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  next steps.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
PricerMlModel/data/preprocessed/: test.csv  train.csv
PricerMlModel/models/V1/: category_anchors.json
PricerMlModel/src/: __init__.py  preprocess.py  test.py  train.py
RetailApp/: database.py  dependencies.py  main.py  models.py  schemas.py
RetailApp/core/: config.py  logging.py  security.py
RetailApp/routes/: authenticate.py  customer.py  order.py  pricer.py  product.py  services.py  users.py
frontend/css/: auth.css  dashboard.css
frontend/js/: dashboard.js
frontend/pages/: admin.html  customer.html  login.html  register.html
test/: conftest.py
test/routers/: test_authenticate.py  test_customers.py  test_orders.py  test_pricer.py  test_products.py  test_users.py
